<resources>
    <string name="с_app_name">Playlist Maker</string>
    <string name="с_user_agreement">Пользовательское соглашение</string>
    <string name="с_settings">Настройки</string>
    <string name="c_search">Поиск</string>
    <string name="c_medias">Медиатека</string>
    <string name="c_tools">Настройки</string>
    <string name="c_share">Поделиться приложением</string>
    <string name="c_w_support">Написать в поддержку</string>
    <string name="c_lic">Пользовательское соглашение</string>
    <string name="c_theme_dark">Темная тема</string>
    <string name="с_media">Медиатека</string>
    <string name="с_playlist">Плейлисты</string>
    <string name="c_favorite_tracks">Избранные треки</string>
    <string name="с_themeSupport">Сообщение разработчикам и разработчицам приложения Playlist Market</string>
    <string name="с_massageSupport">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="с_termsOfUse">https://yandex.ru/legal/practicum_offer/</string>
    <string name="с_urlOfPracticum">https://practicum.yandex.ru/android-developer/</string>
    <string name="с_myEmail">i@iberholz.ru</string>
    <string name="с_search">Поиск</string>
    <string name="с_search_history">Вы искали</string>
    <string name="c_search_clear">Очистить поисковый запрос</string>
    <string name="с_separate">Разделитель</string>
    <string name="c_refresh">Обновить</string>
    <string name="c_nothing_not_found">Ничего не нашлось</string>
    <string name="c_not_internet">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="c_history_clear">Очистить историю</string>
    <string name="c_artist">Артист</string>
    <string name="c_track_title">Заголовок</string>
    <string name="c_track_time">00:00</string>
    <string name="c_duration">Длительность</string>
    <string name="c_album">Альбом</string>
    <string name="c_year">Год</string>
    <string name="c_style">Жанр</string>
    <string name="c_country">Страна</string>
    <string name="c_error_message">Не найдено приложения для запуска!</string>
    <string name="c_new_list">Новый плейлист</string>
    <string name="c_playlist_message">Вы не создали\n\ни одного плейлиста</string>
    <string name="c_tracks_message">Ваша медиатека пуста</string>
    <string name="my_track">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="playlists_name">Название*</string>
    <string name="back_alert_title">Завершить создание плейлиста?</string>
    <string name="back_alert_message">Все несохраненные данные будут потеряны</string>
    <string name="negative_button">Отмена</string>
    <string name="positive_button">Завершить</string>
    <string name="add_playlist_message">Плейлист %s создан</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="new_list">Новый плейлист</string>
    <string name="new_playlists">Новый плейлист</string>
    <string name="playlists_description">Описание</string>
    <string name="create">Создать</string>
    <string name="add_track_message">Добавлено в плейлист</string>
    <string name="add_track_message_false">Трек уже добавлен в плейлист</string>
    <string name="track_title">None</string>
    <string name="artist">No name artist</string>
    <string name="track_time">00:00</string>
    <string name="c_share_c">Поделиться</string>
    <string name="c_share_s">Поделиться</string>
    <string name="delete_playlist_alert_title">Хотите удалить плейлист «%s»?</string>
    <string name="yes_button">Да</string>
    <string name="share_menu_text">Поделиться</string>
    <string name="update_menu_text">Редактировать информацию</string>
    <string name="delete_menu_text">Удалить плейлист</string>
    <string name="delete_track_alert_title">Удалить трек</string>
    <string name="delete_track_alert_message">Вы уверены, что хотите удалить трек из плейлиста?</string>
    <string name="save">Сохранить</string>
    <string name="edit">Редактировать</string>
    <string name="share_mistake">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="ok">Ок</string>
    <string name="empty_playlist_text">В этом плейлисте нет треков</string>
    <string name="no_button">Нет</string>

    <plurals name="tracksContOfList">
        <item quantity="zero">%1$d треков</item>
        <item quantity="one">%1$d трек</item>
        <item quantity="two">%1$d трека</item>
        <item quantity="few">%1$d трека</item>
        <item quantity="many">%1$d треков</item>
        <item quantity="other">%1$d трекoв</item>
    </plurals>

    <plurals name="minutes">
        <item quantity="zero">%1$d минут</item>
        <item quantity="one">%1$d минута</item>
        <item quantity="two">%1$d минуты</item>
        <item quantity="few">%1$d минуты</item>
        <item quantity="many">%1$d минут</item>
        <item quantity="other">%1$d минут</item>
    </plurals>
</resources>