<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settings_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".settings.ui.fragments.SettingsFragment">

    <TextView
        style="@style/HeadStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:paddingVertical="@dimen/icp_14"
        android:paddingStart="@dimen/icp_16"
        android:paddingEnd="0dp"
        android:text="@string/c_tools"
        />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/swModeUi"
        style="@style/s_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/m_height_61"
        android:paddingStart="16dp"
        android:paddingEnd="4dp"
        android:checked="true"
        android:text="@string/c_theme_dark" />

    <TextView
        android:id="@+id/share_app"
        style="@style/s_text_view_setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:gravity="center_vertical"
        android:minHeight="@dimen/m_height_61"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/c_share"
        app:drawableEndCompat="@drawable/share" />

    <TextView
        android:id="@+id/support_app"
        style="@style/s_text_view_setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:gravity="center_vertical"
        android:minHeight="@dimen/m_height_61"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/c_w_support"
        app:drawableEndCompat="@drawable/support" />

    <TextView
        android:id="@+id/terms_app"
        style="@style/s_text_view_setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:gravity="center_vertical"
        android:minHeight="@dimen/m_height_61"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/c_lic"
        app:drawableEndCompat="@drawable/arrow_right" />

</LinearLayout>