<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_activity"
    android:background="?attr/colorPrimary"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/с_app_name"
        android:fontFamily="@font/ys_display_medium"
        android:textColor="@color/white"
        android:textFontWeight="@integer/fw_500"
        android:textSize="@dimen/fs_text_22"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingTop="24dp">

        <Button
            android:id="@+id/search"
            style="@style/s_button_main"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:text="@string/c_search"
            app:icon="@drawable/search" />

        <Button
            android:id="@+id/media"
            style="@style/s_button_main"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:text="@string/c_medias"
            app:icon="@drawable/media"/>

        <Button
            android:id="@+id/tools"
            style="@style/s_button_main"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:text="@string/c_tools"
            app:icon="@drawable/tools"/>

    </LinearLayout>

</LinearLayout>