<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="@dimen/i_p_10"
    tools:context=".SettingsActivity">

    <TableRow android:gravity="center_vertical">
        <TextView
            android:id="@+id/back_to_main_from_settings"
            android:layout_height="?attr/actionBarSize"
            android:gravity="center_vertical"
            style="@style/s_tool_bar_text"
            android:layout_weight="1"
            android:text="@string/c_tools"
            app:drawableStartCompat="@drawable/arrow_back" />
    </TableRow>

    <TableRow
        android:gravity="center_vertical"
        android:paddingStart="6dp"
        android:paddingEnd="0dp"
        android:minHeight="@dimen/m_height_61">

        <TextView
            style="@style/s_text_view_setting"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/c_theme_dark"/>

        <androidx.appcompat.widget.SwitchCompat
            style="@style/s_switch"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:minWidth="48dp" />
    </TableRow>

    <TableRow
        android:gravity="center_vertical"
        android:paddingStart="6dp"
        android:paddingEnd="6dp"
        android:minHeight="@dimen/m_height_61">

        <TextView
            android:id="@+id/share_app"
            style="@style/s_text_view_setting"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:onClick="onClickAction"
            android:clickable="true"
            android:layout_weight="1"
            android:text="@string/c_share"
            app:drawableEndCompat="@drawable/share" />


    </TableRow>

    <TableRow
        android:gravity="center_vertical"
        android:paddingStart="6dp"
        android:paddingEnd="6dp"
        android:minHeight="@dimen/m_height_61">

        <TextView
            android:id="@+id/support_app"
            style="@style/s_text_view_setting"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:onClick="onClickAction"
            android:clickable="true"
            android:layout_weight="1"
            android:text="@string/c_w_support"
            app:drawableEndCompat="@drawable/support"/>
    </TableRow>

    <TableRow
        android:gravity="center_vertical"
        android:paddingStart="6dp"
        android:paddingEnd="6dp"
        android:minHeight="@dimen/m_height_61">

        <TextView
            android:id="@+id/terms_app"
            style="@style/s_text_view_setting"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:onClick="onClickAction"
            android:clickable="true"
            android:layout_weight="1"
            android:text="@string/c_lic"
            app:drawableEndCompat="@drawable/arrow_right" />

    </TableRow>
</TableLayout>