<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".search.ui.fragments.SearchFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/HeadStyle"
        android:layout_gravity="start"
        android:paddingVertical="@dimen/icp_14"
        android:paddingStart="@dimen/icp_16"
        android:paddingEnd="0dp"
        android:text="@string/c_search" />

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp">

        <EditText
            android:id="@+id/inputEditText"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:background="@drawable/edittextbeckground"
            android:drawableStart="@drawable/ic_search"
            android:hint="@string/c_search"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLength="30"
            android:maxLines="1"
            android:paddingStart="9dp"
            android:paddingEnd="0dp"
            android:singleLine="true" />

        <ImageView
            android:id="@+id/clearButtonIcon"
            style="@style/s_clear_iw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="12dp"
            android:contentDescription="@string/c_search_clear"
            android:src="@drawable/ic_close_24"
            android:visibility="gone" />
    </FrameLayout>

    <ProgressBar android:id="@+id/progressBar"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_marginTop="148dp"
        android:layout_gravity="center"
        android:indeterminateTint="@color/c_progress_color"
        android:visibility="gone"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:itemCount="5"
            tools:listitem="@layout/rw_search_item">

        </androidx.recyclerview.widget.RecyclerView>

        <LinearLayout
            android:id="@+id/placeholderMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="110dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/placeholderMessageImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/placeholderMessageText"
                style="@style/placeHolderTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/icp_16" />

            <Button
                android:id="@+id/repeatButton"
                style="@style/placeHolderButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/icp_24"
                android:text="@string/c_refresh"
                android:visibility="gone" />

        </LinearLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/historySearch"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    style="@style/placeHolderTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/i_p_52"
                    android:gravity="center"
                    android:text="@string/с_search_history" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/historySearchList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:itemCount="3"
                    tools:listitem="@layout/rw_search_item" />

                <Button
                    android:id="@+id/clearHistoryButton"
                    style="@style/placeHolderButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/icp_24"
                    android:text="@string/c_history_clear" />
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </FrameLayout>
</LinearLayout>