<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".playlist_creator.ui.PlaylistCreatorFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/leftBorder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/icp_16" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/rightBorder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/icp_16" />

    <LinearLayout
        android:id="@+id/backButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/icp_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/backToMainActivity"
            style="@style/HeadStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/с_app_name"
            android:src="@drawable/arrow_back" />

        <TextView
            style="@style/HeadStyle"
            android:textSize="@dimen/fs_text_26"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:paddingStart="28dp"
            android:paddingEnd="0dp"
            android:text="@string/new_playlists" />
    </LinearLayout>

    <ImageView
        android:id="@+id/playListImage"
        style="@style/AudioPlayerImage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/icp_16"
        android:layout_marginTop="26dp"
        android:layout_marginBottom="@dimen/icp_16"
        android:scaleType="center"
        app:layout_constraintBottom_toTopOf="@id/outlinedTextFieldName"
        app:layout_constraintDimensionRatio="h,1:1"
        app:layout_constraintEnd_toEndOf="@id/rightBorder"
        app:layout_constraintStart_toStartOf="@id/leftBorder"
        app:layout_constraintTop_toBottomOf="@id/backButton"
        app:srcCompat="@drawable/add_picture"
        android:background="@drawable/add_picture_background"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/outlinedTextFieldName"
        style="@style/inputTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/icp_16"
        android:hint="@string/playlists_name"
        app:layout_constraintBottom_toTopOf="@id/outlinedTextFieldDescription"
        app:layout_constraintEnd_toEndOf="@id/rightBorder"
        app:layout_constraintStart_toStartOf="@id/leftBorder"
        app:layout_constraintTop_toBottomOf="@id/playListImage"
>

        <EditText
            android:id="@+id/nameET"
            style="@style/inputTextStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="text"
            android:maxLength="30"
            android:maxLines="1"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/outlinedTextFieldDescription"
        style="@style/inputTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/icp_16"
        android:hint="@string/playlists_description"
        app:layout_constraintEnd_toEndOf="@id/rightBorder"
        app:layout_constraintStart_toStartOf="@id/leftBorder"
        app:layout_constraintTop_toBottomOf="@id/outlinedTextFieldName">

        <EditText
            android:id="@+id/descriptionET"
            style="@style/inputTextStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLength="30"
            android:maxLines="1"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton android:layout_width="0dp"
        android:id="@+id/createButton"
        style="@style/create_button"
        android:layout_height="wrap_content"
        android:padding="@dimen/icp_16"
        android:layout_gravity="center"
        android:text="@string/create"
        android:enabled="false"
        android:layout_marginBottom="32dp"
        android:background="@drawable/button_customize"
        app:layout_constraintVertical_bias="1.0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/rightBorder"
        app:layout_constraintStart_toStartOf="@id/leftBorder"
        app:layout_constraintTop_toBottomOf="@id/outlinedTextFieldDescription"/>

</androidx.constraintlayout.widget.ConstraintLayout>